bin_PROGRAMS = difx2mark4

difx2mark4_SOURCES = \
	difx2mark4.c \
	createRoot.c \
	createType1s.c \
	createType3s.c \
	root_id.c \
	single_code.c \
	conv2date.c \
	get_vis.c \
	swabr.c \
	write_t100.c \
	write_t101.c \
	write_t120.c \
	mk4_typedefs.h \
	type_000.h \
	type_100.h \
	type_101.h \
	type_120.h \
	difx2mark4.h

